<resources>
    <string name="app_name">jetpack_navigation_bottomnavigation_navdrawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payments">Payments</string>
    <string name="papara_card">Papara Card</string>
    <string name="money_transfer">Money Transfer</string>
    <string name="qr_transaction">QR Transaction</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="search_atm">Search ATM</string>
    <string name="withdraw_deposit">Withdraw Deposit</string>
</resources>